--- a/entry/src/main/js/MainAbility/agape/package.json
+++ b/entry/src/main/js/MainAbility/agape/package.json
@@ -17,6 +17,10 @@
     "url-loader": "^4.1.1",
     "worker-loader": "^3.0.8"
   },
+  "devDependencies": {
+    "webpack": "^5.24.4",
+    "webpack-cli": "^4.5.0"
+  },
   "keywords": [],
   "author": "",
   "license": "MIT"
